test/resources/parser/failing/testMatchBinOperand.scala
object MatchAsStringOperand {
  x match { case 1 => "one" } ++ "two"
}